@@ -42,10 +42,13 @@ setup(name = 'gfeedline',
                     ('share/gfeedline/html/theme/Chat.Ascending',
                      [ 'share/html/theme/Chat.Ascending/status.html',
                        'share/html/theme/Chat.Ascending/event.html',
+                       'share/html/theme/Chat.Ascending/retweet.html',
                        'share/html/theme/Chat.Ascending/default.css', ]),
                     ('share/gfeedline/html/theme/Twitter',
                      [ 'share/html/theme/Twitter/status.html',
                        'share/html/theme/Twitter/event.html',
+                       'share/html/theme/Twitter/retweet.html',
+                       'share/html/theme/Twitter/protected.html',
                        'share/html/theme/Twitter/default.css', ]),
                     ('share/gfeedline/html/theme/RTL',
                      [ 'share/html/theme/RTL/default.css', ]),
