@@ -1,0 +1,3 @@
+<a href='http://twitter.com/$retweet_by_screen_name'>
+  <img title='$title_by_screen_name' src='retweet.png' width='18' height='14'>
+</a>
