@@ -1,3 +1,3 @@
-<a href='http://twitter.com/$retweet_by'>
-  <img title='$title' src='retweet.png' width='18' height='14'>
+<a href='http://twitter.com/$retweet_by_screen_name'>
+  <img title='$title_by_name' src='retweet.png' width='18' height='14'>
 </a>
